# vrps-runpod

./: .dockerignore  Dockerfile  README.md  build-and-push.yml  build-models.sh  job_runner.py  requirements.txt  start.sh
src/: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  PROJECT.md  README.ja-JP.md  README.md  README.zh-CN.md  VR_Video_Passthrough_Server.spec  build_exe.bat  build_exe.py  config.py  main.py  make_update_package.py  media_library.py  pt_core.spec  pyproject.toml  run_server.bat
src/dlna/: __init__.py  connection_manager.py  content_directory.py  descriptions.py  profiles.py  ssdp.py
src/examples/: da3_README.md  da3_to_onnx.py  export_nvds_onnx.py  matanyone2_onnx_huggingface_readme.md  matanyone2_onnx_video_infer.py  nvds_README.md
src/http_app/: __init__.py  routes_control.py  routes_dlna.py  routes_media.py  server.py  si_stream.py
src/models/: get_matanyone2_model_readme.txt  get_rvm_model_readme.txt  get_sam3-onnx-models.txt
src/offline/: __init__.py  convert.py  da3_depth.py  decoded_frames.py  matanyone2_engine.py  nvds_stabilizer.py  sam3_matanyone2.py  two_dvr.py  two_dvr_gpu.py  two_dvr_pynv.py  two_dvr_render.py  yolo26m_birefnet.py  yolo26m_efficientsam.py  yoloworld_efficientsam.py
src/packaging/: runtime_hook_cuda_dlls.py  sitecustomize.py
src/pipeline/: __init__.py  alpha_guided_filter.py  alpha_packer.py  ffmpeg_io.py  light_match.py  matanyone2_roi.py  matting.py  pynv_io.py  pynv_stream.py  si_virtual_mp4.py  stream.py  subtitles.py  thumbnail.py
src/prompt/: HANDOVER_20260506.md  HANDOVER_20260507.md  HANDOVER_20260508.md  HANDOVER_20260509.md  HANDOVER_20260510.md  HANDOVER_20260511.md  HANDOVER_20260512.md  HANDOVER_20260513.md  HANDOVER_20260514.md  HANDOVER_20260515.md  HANDOVER_20260516.md  HANDOVER_20260517.md  HANDOVER_20260518.md  HANDOVER_20260519.md  HANDOVER_20260520.md  HANDOVER_20260521.md  HANDOVER_20260522.md  HANDOVER_20260523.md  (+17 more)
(+304 files in other folders)
